subiendo nuevo trabajo

--- a/DWFSP1-188/algoritmos/IntroJS/Ejercicio-Flores/index.html
+++ b/DWFSP1-188/algoritmos/IntroJS/Ejercicio-Flores/index.html
@@ -7,21 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section>
-        <h1>Introduccion A Javascript</h1>
-        <h2>Vamos crear un algoritmo que me diga si un numero es par o impar</h2>
-        <ol>
-            <li>En lenguaje natural</li>
-            <li>En diagrama de flujo</li>
-        </ol>
-        <h3>Pista:</h3>
-        <p>averiguar el operador del modulo</p>
-        <input type="number" id="entradaUsuarioPar">
-        <button id="btnPar">Calcular</button>
-         <div id="salidaPar"></div>
-    </section>
-    
-    
+   <h1>Flores</h1>
+   <input type="number" id="entradaUsuario">
+   <button id="btnCalcular">Calcular</button>
+   <input type="number" id="entrada1">
+   <input type="number" id="entrada2">
+   <input type="number" id="entrada3">
+   <input type="number" id="entrada4">
+   
+
+   <ul id="salida"></ul>
 </body>
 <script src="main.js"></script>
 </html>
